--- a/.classpath
+++ b/.classpath
@@ -9,6 +9,8 @@
 	<classpathentry kind="con" path="org.eclipse.jst.j2ee.internal.module.container"/>
 	<classpathentry kind="src" path="src"/>
 	<classpathentry kind="con" path="org.eclipse.jst.server.core.container/org.eclipse.jst.server.tomcat.runtimeTarget/Apache Tomcat v8.5"/>
-	<classpathentry kind="lib" path="/home/mark/Downloads/mysql-connector-java-5.1.40/mysql-connector-java-5.1.40-bin.jar"/>
+	<classpathentry kind="lib" path="/media/mark/data/BSc Computing/Year3/Enterprise Programming/workspace/Assignment/WebContent/WEB-INF/lib/java-json.jar"/>
+	<classpathentry kind="lib" path="/media/mark/data/BSc Computing/Year3/Enterprise Programming/workspace/Assignment/WebContent/WEB-INF/lib/gson-2.8.0.jar"/>
+	<classpathentry kind="lib" path="/media/mark/data/BSc Computing/Year3/Enterprise Programming/workspace/Assignment/WebContent/WEB-INF/lib/mysql-connector-java-5.1.40-bin.jar"/>
 	<classpathentry kind="output" path="build/classes"/>
 </classpath>
