--- a/.classpath
+++ b/.classpath
@@ -12,5 +12,7 @@
 	<classpathentry kind="lib" path="/media/mark/data/BSc Computing/Year3/Enterprise Programming/workspace/Assignment/WebContent/WEB-INF/lib/java-json.jar"/>
 	<classpathentry kind="lib" path="/media/mark/data/BSc Computing/Year3/Enterprise Programming/workspace/Assignment/WebContent/WEB-INF/lib/gson-2.8.0.jar"/>
 	<classpathentry kind="lib" path="/media/mark/data/BSc Computing/Year3/Enterprise Programming/workspace/Assignment/WebContent/WEB-INF/lib/mysql-connector-java-5.1.40-bin.jar"/>
+	<classpathentry kind="lib" path="/media/mark/data/BSc Computing/Year3/Enterprise Programming/workspace/Assignment/WebContent/WEB-INF/lib/xstream-1.4.9.jar"/>
+	<classpathentry kind="lib" path="/media/mark/data/BSc Computing/Year3/Enterprise Programming/workspace/Assignment/WebContent/WEB-INF/lib/xmlpull-1.1.3.1.jar"/>
 	<classpathentry kind="output" path="build/classes"/>
 </classpath>
