--- a/.classpath
+++ b/.classpath
@@ -14,5 +14,6 @@
 	<classpathentry kind="lib" path="/media/mark/data/BSc Computing/Year3/Enterprise Programming/workspace/Assignment/WebContent/WEB-INF/lib/mysql-connector-java-5.1.40-bin.jar"/>
 	<classpathentry kind="lib" path="/media/mark/data/BSc Computing/Year3/Enterprise Programming/workspace/Assignment/WebContent/WEB-INF/lib/xstream-1.4.9.jar"/>
 	<classpathentry kind="lib" path="/media/mark/data/BSc Computing/Year3/Enterprise Programming/workspace/Assignment/WebContent/WEB-INF/lib/xmlpull-1.1.3.1.jar"/>
+	<classpathentry kind="con" path="org.eclipse.jdt.launching.JRE_CONTAINER/org.eclipse.jdt.internal.debug.ui.launcher.StandardVMType/JavaSE-1.7"/>
 	<classpathentry kind="output" path="build/classes"/>
 </classpath>
