--- a/.classpath
+++ b/.classpath
@@ -1,19 +1,19 @@
 <?xml version="1.0" encoding="UTF-8"?>
 <classpath>
-	<classpathentry kind="con" path="org.eclipse.jdt.launching.JRE_CONTAINER/org.eclipse.jdt.internal.debug.ui.launcher.StandardVMType/JavaSE-1.8">
+	<classpathentry excluding="localhost/AssignmentV2/CoursesController/" kind="src" path="src"/>
+	<classpathentry kind="con" path="com.google.appengine.eclipse.core.GAE_CONTAINER"/>
+	<classpathentry kind="con" path="com.google.gwt.eclipse.core.GWT_CONTAINER"/>
+	<classpathentry kind="lib" path="/media/mark/data/BSc Computing/Year3/Enterprise Programming/workspace/AssignmentV2/war/WEB-INF/lib/gson-2.8.0.jar"/>
+	<classpathentry kind="lib" path="/media/mark/data/BSc Computing/Year3/Enterprise Programming/workspace/AssignmentV2/war/WEB-INF/lib/java-json.jar"/>
+	<classpathentry kind="lib" path="/media/mark/data/BSc Computing/Year3/Enterprise Programming/workspace/AssignmentV2/war/WEB-INF/lib/mysql-connector-java-5.1.40-bin.jar"/>
+	<classpathentry kind="lib" path="/media/mark/data/BSc Computing/Year3/Enterprise Programming/workspace/AssignmentV2/war/WEB-INF/lib/xmlpull-1.1.3.1.jar"/>
+	<classpathentry kind="lib" path="/media/mark/data/BSc Computing/Year3/Enterprise Programming/workspace/AssignmentV2/war/WEB-INF/lib/xstream-1.4.9.jar"/>
+	<classpathentry kind="con" path="org.eclipse.jdt.launching.JRE_CONTAINER/org.eclipse.jdt.internal.debug.ui.launcher.StandardVMType/JavaSE-1.7">
 		<attributes>
-			<attribute name="owner.project.facets" value="java"/>
+			<attribute name="owner.project.facets" value="#system#;java"/>
 		</attributes>
 	</classpathentry>
 	<classpathentry kind="con" path="org.eclipse.jst.j2ee.internal.web.container"/>
 	<classpathentry kind="con" path="org.eclipse.jst.j2ee.internal.module.container"/>
-	<classpathentry kind="src" path="src"/>
-	<classpathentry kind="con" path="org.eclipse.jst.server.core.container/org.eclipse.jst.server.tomcat.runtimeTarget/Apache Tomcat v8.5"/>
-	<classpathentry kind="lib" path="/media/mark/data/BSc Computing/Year3/Enterprise Programming/workspace/Assignment/WebContent/WEB-INF/lib/java-json.jar"/>
-	<classpathentry kind="lib" path="/media/mark/data/BSc Computing/Year3/Enterprise Programming/workspace/Assignment/WebContent/WEB-INF/lib/gson-2.8.0.jar"/>
-	<classpathentry kind="lib" path="/media/mark/data/BSc Computing/Year3/Enterprise Programming/workspace/Assignment/WebContent/WEB-INF/lib/mysql-connector-java-5.1.40-bin.jar"/>
-	<classpathentry kind="lib" path="/media/mark/data/BSc Computing/Year3/Enterprise Programming/workspace/Assignment/WebContent/WEB-INF/lib/xstream-1.4.9.jar"/>
-	<classpathentry kind="lib" path="/media/mark/data/BSc Computing/Year3/Enterprise Programming/workspace/Assignment/WebContent/WEB-INF/lib/xmlpull-1.1.3.1.jar"/>
-	<classpathentry kind="con" path="org.eclipse.jdt.launching.JRE_CONTAINER/org.eclipse.jdt.internal.debug.ui.launcher.StandardVMType/JavaSE-1.7"/>
-	<classpathentry kind="output" path="build/classes"/>
+	<classpathentry kind="output" path="war/WEB-INF/classes"/>
 </classpath>
